--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "logkitty": "^0.7.1",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
